--- a/composer.json
+++ b/composer.json
@@ -61,11 +61,18 @@
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
         "prepare": "@php testbench package:discover --ansi",
+        "clear": [
+            "@php -r \"file_exists('laravel/.env') && unlink('laravel/.env');\"",
+            "@php -r \"file_exists('laravel/testbench.yaml') && unlink('laravel/testbench.yaml');\"",
+            "@php -r \"file_exists('laravel/database/database.sqlite') && unlink('laravel/database/database.sqlite');\""
+        ],
         "ci": [
+            "@composer run clear",
             "@composer run prepare",
             "@php vendor/bin/phpstan analyse"
         ],
         "test": [
+            "@composer run clear",
             "@composer run prepare",
             "@php vendor/bin/phpunit -c ./ --color"
         ]
