--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,10 @@
         }
     },
     "scripts": {
-        "post-autoload-dump": "@composer run prepare",
+        "post-autoload-dump": [
+            "@composer run clear",
+            "@composer run prepare"
+        ],
         "prepare": "@php testbench package:discover --ansi",
         "clear": [
             "@php -r \"file_exists('laravel/.env') && unlink('laravel/.env');\"",
