--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 
 # Ignore following folder/file.
 /.github export-ignore
+/workbench export-ignore
 /tests export-ignore
 /.coveralls.yml export-ignore
 /.gitattributes export-ignore
@@ -12,7 +13,6 @@
 /canvas.yaml export-ignore
 /phpstan-baseline.neon export-ignore
 /phpstan.neon.dist export-ignore
-/phpunit9.xml export-ignore
 /phpunit.xml export-ignore
 /pint.json export-ignore
 /sync.sh export-ignore
