--- a/.gitattributes
+++ b/.gitattributes
@@ -3,12 +3,9 @@
 # Ignore following folder/file.
 /.github export-ignore
 /tests export-ignore
-/.coveralls.yml export-ignore
+/workbench export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.php_cs export-ignore
-/.scrutinizer.yml export-ignore
-/.travis.yml export-ignore
 /canvas.yaml export-ignore
 /phpunit.xml export-ignore
 /sync.sh export-ignore
