--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,6 +10,7 @@ parameters:
 
   ignoreErrors:
     - '#Unsafe usage of new static#'
+    - '#Access to an undefined static property static\(Orchestra\\Testbench\\Foundation\\Application\)::\$cachedTestCaseUses.#'
 
   excludePaths:
     - src/Exceptions/DeprecatedException.php
