--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,10 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /canvas.yaml export-ignore
+/phpstan-baseline.neon export-ignore
+/phpstan.neon.dist export-ignore
 /phpunit.xml export-ignore
+/pint.json export-ignore
 /sync.sh export-ignore
 /testbench.yaml export-ignore
 /CHANGELOG-*.md export-ignore
