--- a/.github/workflows/analyse.yaml
+++ b/.github/workflows/analyse.yaml
@@ -1,13 +1,11 @@
-name: audits
+name: analyse
 
 on:
   push:
   pull_request:
-  schedule:
-    - cron: '0 0 * * *'
 
 jobs:
-  audit-dependencies:
+  analyse:
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
@@ -15,12 +13,9 @@ jobs:
         os:
           - "ubuntu-latest"
         php:
-          - 7.3
-          - 7.4
-          - '8.0'
           - 8.1
         experimental:
-          - true
+          - false
 
     name: PHP${{ matrix.php }} on ${{ matrix.os }}
 
@@ -39,10 +34,13 @@ jobs:
         uses: "ramsey/composer-install@v2"
         with:
           dependency-versions: "highest"
-          composer-options: "--prefer-dist --prefer-stable --no-cache"
+          composer-options: "--prefer-dist --no-cache"
 
       - name: Installed dependencies
         run: composer show -D
 
-      - name: Audit dependencies
-        run: composer audit
+      - name: Execute Code Style Analysis
+        run: vendor/bin/pint --test
+
+      - name: Execute Static Code Analysis
+        run: vendor/bin/phpstan analyse
