Skip loading `Orchestra\Workbench\WorkbenchServiceProvider` when applying `Orchestra\Testbench\Concerns\WithWorkbench` (#134)
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -70,11 +70,14 @@
             "@composer run clear",
             "@composer run prepare"
         ],
-        "prepare": "@php testbench package:discover --ansi",
         "clear": "@php testbench package:purge-skeleton --ansi",
+        "prepare": "@php testbench package:discover --ansi",
         "ci": [
             "@composer audit",
             "@composer run prepare",
+            "@composer run lint"
+        ],
+        "lint": [
             "@php vendor/bin/pint",
             "@php vendor/bin/phpstan analyse"
         ],
