Allow `testbench.yaml` configuration fallback
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,9 @@
         "ci": [
             "@composer run clear",
             "@composer run prepare",
+            "@composer run lint"
+        ],
+        "lint": [
             "@php vendor/bin/phpstan analyse"
         ],
         "test": [
