--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -27,7 +27,7 @@ DB_CONNECTION=sqlite
 BROADCAST_CONNECTION=log
 CACHE_STORE=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
