--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "testbench"
     ],
     "require": {
-        "php": ">=8.2.0 <8.4.0",
+        "php": "^8.2",
         "composer-runtime-api": "^2.2"
     },
     "require-dev": {
