--- a/.gitattributes
+++ b/.gitattributes
@@ -11,7 +11,7 @@
 /phpstan.neon.dist export-ignore
 /phpunit.xml export-ignore
 /pint.json export-ignore
-/sync.sh export-ignore
+/sync export-ignore
 /testbench.yaml export-ignore
 /CHANGELOG-*.md export-ignore
 /CODE_OF_CONDUCT.md export-ignore
