--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Install PHPUnit ${{ matrix.phpunit }}
         run: |
           composer require "phpunit/phpunit:${{ matrix.phpunit }}" --no-interaction --no-update
-          composer require "nunomaduro/collision:~6.2" "brianium/paratest:~6.4" --dev --no-interaction --no-update
+          composer require "nunomaduro/collision:^6.2" "brianium/paratest:^6.4" --dev --no-interaction --no-update
 
       - name: Install dependencies
         uses: "ramsey/composer-install@v2"
