--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "vlucas/phpdotenv": "^5.4.1"
     },
     "conflict": {
-        "laravel/framework": "<9.52.9",
+        "brianium/paratest": "<6.4.0 || >=7.0.0",
+        "laravel/framework": "<9.52.9 || >=10.0.0",
         "nunomaduro/collision": "<6.2.0 || >=7.0.0"
     },
     "suggest": {
