--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -42,8 +42,7 @@ jobs:
       - name: Install PHPUnit ${{ matrix.phpunit }}
         run: |
           composer require "phpunit/phpunit:${{ matrix.phpunit }}" --no-interaction --no-update
-          composer require "nunomaduro/collision:@stable" --dev --no-interaction --no-update
-          composer require "brianium/paratest:@stable" --dev --no-interaction --no-update
+          composer require "brianium/paratest:@stable" "nunomaduro/collision:^5.0" --dev --no-interaction --no-update
 
       - name: Install dependencies
         uses: "ramsey/composer-install@v2"
