--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -51,6 +51,9 @@ jobs:
           dependency-versions: "${{ matrix.dependencies }}"
           composer-options: "--prefer-dist --no-cache"
 
+      - name: Installed dependencies
+        run: composer show -D
+
       - name: Prepare Testbench
         run: composer run prepare
 
