--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
     "conflict": {
         "brianium/paratest": "<6.4.0 || >=7.0.0",
         "laravel/framework": "<8.83.27 || >=9.0.0",
-        "nunomaduro/collision": "<5.0.0 || >=6.0.0"
+        "nunomaduro/collision": "<5.0.0 || >=6.0.0",
+        "phpunit/phpunit": "<8.5.21 || >=9.0.0 <9.5.10 || >=10.0.0"
     },
     "suggest": {
         "brianium/paratest": "Allow using parallel testing (^6.4).",
