--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,8 @@
         "mockery/mockery": "^1.5.1",
         "phpstan/phpstan": "^1.10.7",
         "phpunit/phpunit": "^10.1",
-        "symfony/process": "^6.4 || ^7.0",
-        "symfony/yaml": "^6.4 || ^7.0",
+        "symfony/process": "^7.0",
+        "symfony/yaml": "^7.0",
         "vlucas/phpdotenv": "^5.4.1"
     },
     "conflict": {
