--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -24,7 +24,7 @@ jobs:
         dependencies:
           - "highest"
         experimental:
-          - true
+          - false
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
@@ -79,7 +79,7 @@ jobs:
         dependencies:
           - "highest"
         experimental:
-          - true
+          - false
 
     name: PHP${{ matrix.php }} with Coverage on ${{ matrix.os }} (${{ matrix.dependencies }})
 
