--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -17,10 +17,7 @@ jobs:
         php:
           - 8.2
         phpunit:
-          - "~10.1.0"
-          - "~10.2.0"
-          - "~10.3.0"
-          - "~10.4.0"
+          - "~10.4.1"
         collision:
           - "^8.0"
         paratest:
@@ -28,7 +25,7 @@ jobs:
         dependencies:
           - "highest"
         experimental:
-          - true
+          - false
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
