--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -2,12 +2,7 @@ name: parallel-tests
 
 on:
   push:
-    branches-ignore:
-      - 9.x
-      - next/*
   pull_request:
-    branches-ignore:
-      - next/*
   schedule:
     - cron: '0 0 1 * *'
 
@@ -22,18 +17,15 @@ jobs:
         php:
           - 8.2
         phpunit:
-          - "~10.1.0"
-          - "~10.2.0"
-          - "~10.3.0"
-          - "~10.4.0"
+          - "~10.4.1"
         collision:
           - "^8.0"
         paratest:
-          - "^7.1.4"
+          - "^7.3"
         dependencies:
           - "highest"
         experimental:
-          - true
+          - false
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
