--- a/composer.json
+++ b/composer.json
@@ -44,18 +44,18 @@
         "mockery/mockery": "^1.5.1",
         "phpstan/phpstan": "^1.10.7",
         "phpunit/phpunit": "^10.1",
-        "symfony/process": "^6.4 || ^7.0",
-        "symfony/yaml": "^6.4 || ^7.0",
+        "symfony/process": "^7.0",
+        "symfony/yaml": "^7.0",
         "vlucas/phpdotenv": "^5.4.1"
     },
     "conflict": {
-        "brianium/paratest": "<7.1.4 || >=8.0.0",
+        "brianium/paratest": "<7.3.0 || >=8.0.0",
         "laravel/framework": "<11.0.0 || >=12.0.0",
         "nunomaduro/collision": "<8.0.0 || >=9.0.0",
         "phpunit/phpunit": "<10.1.0 || >=10.5.0"
     },
     "suggest": {
-        "brianium/paratest": "Allow using parallel tresting (^7.1.4).",
+        "brianium/paratest": "Allow using parallel tresting (^7.3).",
         "fakerphp/faker": "Allow using Faker for testing (^1.21).",
         "laravel/framework": "Required for testing (^11.0).",
         "mockery/mockery": "Allow using Mockery for testing (^1.5.1).",
