--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "laravel/framework": "^9.52.9",
         "laravel/pint": "^1.4",
         "mockery/mockery": "^1.5.1",
+        "orchestra/workbench": "^0.4.2 || ^0.5.1 || ^1.0",
         "phpstan/phpstan": "^1.10.7",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ray": "^1.32.4",
@@ -52,7 +53,6 @@
         "brianium/paratest": "<6.4.0 || >=7.0.0",
         "laravel/framework": "<9.52.9 || >=10.0.0",
         "nunomaduro/collision": "<6.2.0 || >=7.0.0",
-        "orchestra/workbench": "<0.4.0",
         "phpunit/phpunit": "<9.5.10 || >=10.0.0"
     },
     "suggest": {
