--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "psr-4": {
             "Orchestra\\Testbench\\Tests\\": "tests/",
             "Workbench\\App\\": "workbench/app/",
-            "Workbench\\Database\\": "workbench/database/"
+            "Workbench\\Database\\Factories\\": "workbench/database/factories",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders"
         }
     },
     "bin": [
