--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,8 @@
         "clear": [
             "@php -r \"file_exists('laravel/.env') && unlink('laravel/.env');\"",
             "@php -r \"file_exists('laravel/testbench.yaml') && unlink('laravel/testbench.yaml');\"",
-            "@php -r \"file_exists('laravel/database/database.sqlite') && unlink('laravel/database/database.sqlite');\""
+            "@php -r \"file_exists('laravel/database/database.sqlite') && unlink('laravel/database/database.sqlite');\"",
+            "@php testbench view:clear"
         ],
         "lint": [
             "@php vendor/bin/phpstan analyse"
