--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "laravel/pint": "^1.6",
         "mockery/mockery": "^1.5.1",
         "phpstan/phpstan": "^1.10.7",
-        "phpunit/phpunit": "^11.0",
+        "phpunit/phpunit": "^10.1 || ^11.0",
         "symfony/process": "^7.0",
         "symfony/yaml": "^7.0",
         "vlucas/phpdotenv": "^5.4.1"
