--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -57,4 +57,4 @@ jobs:
         run: composer run prepare
 
       - name: Execute tests
-        run: ./testbench package:test --parallel
+        run: ./testbench package:test --parallel --exclude-group session
