--- a/.github/workflows/audits.yaml
+++ b/.github/workflows/audits.yaml
@@ -3,8 +3,7 @@ name: audits
 on:
   push:
   pull_request:
-  schedule:
-    - cron: '0 0 1 * *'
+  workflow_dispatch:
 
 jobs:
   audit-dependencies:
