--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "phpstan/phpstan": "^1.10.7",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ray": "^1.32.4",
+        "symfony/polyfill-php83": "^1.28",
         "symfony/process": "^6.2",
         "symfony/yaml": "^6.2",
         "vlucas/phpdotenv": "^5.4.1"
