--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "composer-runtime-api": "^2.2"
+        "composer-runtime-api": "^2.2",
+        "symfony/polyfill-php83": "^1.28"
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
@@ -46,7 +47,6 @@
         "phpstan/phpstan": "^1.10.7",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ray": "^1.32.4",
-        "symfony/polyfill-php83": "^1.28",
         "symfony/process": "^6.2",
         "symfony/yaml": "^6.2",
         "vlucas/phpdotenv": "^5.4.1"
