--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -26,6 +26,11 @@ parameters:
 			path: src/Bootstrap/LoadEnvironmentVariables.php
 
 		-
+			message: "#^Method Orchestra\\\\Testbench\\\\Foundation\\\\Application\\:\\:resolvePhpUnitAttributes\\(\\) should return Illuminate\\\\Support\\\\Collection&iterable\\<class\\-string\\<Orchestra\\\\Testbench\\\\Contracts\\\\Attributes\\\\TestingFeature\\>, array\\<int, Orchestra\\\\Testbench\\\\Contracts\\\\Attributes\\\\TestingFeature\\>\\> but returns Illuminate\\\\Support\\\\Collection\\.$#"
+			count: 1
+			path: src/Foundation/Application.php
+
+		-
 			message: "#^Call to an undefined static method Illuminate\\\\Support\\\\Facades\\\\ParallelTesting\\:\\:callSetUpTestCaseCallbacks\\(\\)\\.$#"
 			count: 1
 			path: src/TestCase.php
@@ -36,7 +41,7 @@ parameters:
 			path: src/TestCase.php
 
 		-
-			message: "#^Method Orchestra\\\\Testbench\\\\TestCase\\:\\:parseTestMethodAttributes\\(\\) should return Illuminate\\\\Support\\\\Collection&iterable\\<int, Closure\\(\\)\\: void\\> but returns Illuminate\\\\Support\\\\Collection&iterable\\<string, mixed\\>\\.$#"
+			message: "#^Method Orchestra\\\\Testbench\\\\TestCase\\:\\:resolvePhpUnitAttributes\\(\\) should return Illuminate\\\\Support\\\\Collection&iterable\\<class\\-string\\<Orchestra\\\\Testbench\\\\Contracts\\\\Attributes\\\\TestingFeature\\>, array\\<int, Orchestra\\\\Testbench\\\\Contracts\\\\Attributes\\\\TestingFeature\\>\\> but returns Illuminate\\\\Support\\\\Collection\\.$#"
 			count: 1
 			path: src/TestCase.php
 
