--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Install Paratest
         run: |
+          composer require "phpunit/phpunit:^10.1" --dev --no-interaction --no-update
           composer require "nunomaduro/collision:${{ matrix.collision }}" "brianium/paratest:${{ matrix.paratest }}" --dev --no-interaction --no-update
 
       - name: Install dependencies
