--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -9,8 +9,8 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=cache
-APP_MAINTENANCE_STORE=file
+APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=database
 
 LOG_CHANNEL=stack
 LOG_STACK=single
@@ -28,7 +28,7 @@ BROADCAST_CONNECTION=log
 CACHE_STORE=database
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
-SESSION_DRIVER=database
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
