--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
             "Orchestra\\Testbench\\": "src/"
         },
         "files": [
-            "src/helpers.php"
+            "src/functions.php"
         ]
     },
     "autoload-dev": {
