--- a/composer.json
+++ b/composer.json
@@ -81,9 +81,9 @@
             "@prepare"
         ],
         "post-update-cmd": [
-            "@clear",
             "@php bin/sync",
-            "@php vendor/bin/pint"
+            "@php vendor/bin/pint",
+            "@clear"
         ],
         "clear": "@php testbench package:purge-skeleton --ansi",
         "prepare": "@php testbench package:discover --ansi",
